--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,11 @@
     <dependencies>
         <!-- Servlet API (provided by Tomcat) -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
             <scope>provided</scope>
         </dependency>
-
         <!-- JSTL API -->
         <dependency>
             <groupId>javax.servlet.jsp.jstl</groupId>
