--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                             http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
+
+    <!-- 欢迎文件列表：优先使用 index.jsp -->
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+        <!-- 如果需要也可以备选 login.jsp、register.jsp 等 -->
+    </welcome-file-list>
+
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>servlet.LoginServlet</servlet-class>
@@ -53,4 +64,5 @@
         <servlet-name>ForumServlet</servlet-name>
         <url-pattern>/forum</url-pattern>
     </servlet-mapping>
+
 </web-app>
