完成了所有基础子页面的基础样式，同意了设计风格，，重置了登录界面

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
     <!-- 欢迎文件列表：优先使用 index.jsp -->
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>login.jsp</welcome-file>
         <!-- 如果需要也可以备选 login.jsp、register.jsp 等 -->
     </welcome-file-list>
 
