--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,75 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                             http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-
-    <!-- 欢迎文件列表：优先使用 index.jsp -->
-    <welcome-file-list>
-        <welcome-file>home.jsp</welcome-file>
-        <!-- 如果需要也可以备选 login.jsp、register.jsp 等 -->
-    </welcome-file-list>
-
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         version="5.0">
+    
+    <!-- CompareServlet配置 -->
     <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>servlet.LoginServlet</servlet-class>
+        <servlet-name>compareServlet</servlet-name>
+        <servlet-class>servlet.CompareServlet</servlet-class>
+        <init-param>
+            <param-name>csvPath</param-name>
+            <param-value>/assets/data/50_Sample_Overview_Data.csv</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <servlet-name>compareServlet</servlet-name>
+        <url-pattern>/compare</url-pattern>
     </servlet-mapping>
-
+    
+    <!-- OverviewServlet配置 -->
     <servlet>
-        <servlet-name>RegisterServlet</servlet-name>
-        <servlet-class>servlet.useRegisterServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>RegisterServlet</servlet-name>
-        <url-pattern>/register</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>MainServlet</servlet-name>
-        <servlet-class>servlet.HomeServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>MainServlet</servlet-name>
-        <url-pattern>/main</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>LogoutServlet</servlet-name>
-        <servlet-class>servlet.LogoutServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LogoutServlet</servlet-name>
-        <url-pattern>/logout</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>OverviewServlet</servlet-name>
+        <servlet-name>overviewServlet</servlet-name>
         <servlet-class>servlet.OverviewServlet</servlet-class>
         <init-param>
             <param-name>csvPath</param-name>
             <param-value>/assets/data/50_Sample_Overview_Data.csv</param-value>
         </init-param>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>OverviewServlet</servlet-name>
+        <servlet-name>overviewServlet</servlet-name>
         <url-pattern>/overview</url-pattern>
     </servlet-mapping>
-
+    
+    <!-- LogoutServlet配置 -->
     <servlet>
-        <servlet-name>ForumServlet</servlet-name>
-        <servlet-class>servlet.ForumServlet</servlet-class>
+        <servlet-name>logoutServlet</servlet-name>
+        <servlet-class>servlet.LogoutServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ForumServlet</servlet-name>
-        <url-pattern>/forum</url-pattern>
+        <servlet-name>logoutServlet</servlet-name>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
-    <mime-mapping>
-        <extension>svg</extension>
-        <mime-type>image/svg+xml</mime-type>
-    </mime-mapping>
+    
+    <!-- 欢迎页配置 -->
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>home.jsp</welcome-file>
+    </welcome-file-list>
+    
+    <!-- 会话配置 -->
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
+
 </web-app>
