--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,15 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.2</version>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <finalName>DB_assignment</finalName>
