--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -79,6 +79,11 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.svg</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.mp4</url-pattern>
+    </servlet-mapping>
+
     <!-- 其他配置 -->
     
 </web-app>
