--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -45,8 +45,8 @@
     
     <!-- 欢迎页配置 -->
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>home.jsp</welcome-file>
+        <welcome-file>assets/page/login.jsp</welcome-file>
+        <welcome-file>assets/page/home.jsp</welcome-file>
     </welcome-file-list>
     
     <!-- 会话配置 -->
