--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
     <dependencies>
         <!-- Servlet API (provided by Tomcat) -->
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <version>5.0.0</version>
